# corctf-2025-public-challenge-repo

./: README.md
crypto/corcoin/: challenge.yml
crypto/corcoin/chall/server/: Cargo.toml
crypto/corcoin/chall/server/src/: main.rs
crypto/keys/: challenge.yaml  decrypt.py
crypto/oooo/: Dockerfile  challenge.yml  flag.txt
crypto/rules/: Dockerfile  challenge.yml  explanation.md  flag.txt  intended_solution.py
crypto/sol-rps/: challenge.yml
crypto/sol-rps/chall/server/: Cargo.toml
crypto/sol-rps/chall/server/src/: main.rs
crypto/ssss/: challenge.yml  flag.txt
crypto/sudoku/: Dockerfile  challenge.yml  explanation.md  flag.txt  solve_sudoku.py
forensics/nintendosswitch/: Dockerfile  challenge.yml  encrypt_flag.py  flag.blob  flag.txt  solution.md
misc/control/: challenge.yml  flag.txt
misc/corchat-v4/: Dockerfile  README.md  challenge.yml  flag.txt  messages.txt
misc/corchat-v4/corchat/: Cargo.toml
misc/corchat-v4/corchat/src/: app.rs  db.rs  main.rs
misc/corshop/: Cargo.toml  Dockerfile  build.sh  challenge.yml  launch_shop.sh  run.sh
misc/england/: challenge.yml
misc/msfrogofwar4/: challenge.yml
misc/msfrogofwar4/chall/chess-web/: Cargo.toml
misc/msfrogofwar4/chall/chess-web/src/: engine.rs  game.rs  main.rs  session.rs  websocket.rs
misc/msfrogofwar4/chall/chess-web/static/: index.html
misc/msfrogofwar4/chall/chess-web/static/js/: game.js
misc/pipes/: .dockerignore  Dockerfile  README.md  challenge.yml  flag.txt  run.sh
misc/touch-grass-3/: Dockerfile  challenge.yml  client-logic.ts  client.ts  common.ts  index.css  index.html  package-lock.json  package.json  server-logic.ts  server.ts  tsconfig.json  vite.config.js
misc/vanity-check/: challenge.yml
pwn/corphone/: README.md
pwn/corservices-analyzer/: Dockerfile  analyzer.c  challenge.yml
pwn/corservices-defender/: Defender.sys  challenge.yml  defender.c  run.sh
pwn/frogcompute/: .gitignore  Dockerfile  chall.c  challenge.yml  explanation.md  flag.txt  solve.sh
pwn/hangbuzz101/: challenge.yml  init  make-kernel.sh  sol.txt
pwn/tua-cugina/: challenge.yml  run
pwn/zenerational-aura/: build  challenge.yml  run.sh
rev/bubble-vm/: Unscrambler.java  bubble_assembler.py  bubble_vm.c  flag.txt  (+5 more)
(+221 files in other folders)
