[package]
name = "corchat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "bots"

