[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
sol-ctf-framework = { git = "https://github.com/otter-sec/sol-ctf-framework.git" }
solana-sdk = "2.2.2"
solana-program = "=2.2.1"
solana-program-test = "2.2.7"
spl-token = "=8.0.0"
threadpool = "1.8.1"
tokio = { version = "1.47.1", features = ["full"] }
borsh = "0.10"
anchor-lang = "0.31.1"
corcoin = { path = "../program/programs/corcoin", features = ["cpi"] }
solana-vote-program = "2.2.1"
