[package]
name = "chess-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart"] }
shakmaty = { version = "0.29.1", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["fs"] }
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
wasmtime = { version = "36.0.2", features = ["component-model-async"] }
wasmtime-wasi = "36.0.2"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
